style: Increase sidebar gaps and fix grid-area for sidebar and book card section

--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@ p{
 }
 
 .side-bar{
-    grid-area: 'side-bar';
+    grid-area: side-bar;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
+    gap: 8rem;
     flex-direction: column;
     align-items: center;
     padding: 1rem;
@@ -38,7 +39,6 @@ p{
     text-align: center;
     padding: 0.5rem;
     margin: 0;
-    margin-bottom: 3rem;
 }
 
 .progress{
@@ -54,7 +54,6 @@ p{
    border-radius: 1rem; 
     width: 100%;
     height: 1rem;
-    margin-bottom: 5rem;
 }
 
 #progress-bar-fill{
@@ -123,7 +122,7 @@ input:focus{
     border: 2px solid gray;
     display: flex;
 
-    margin: 1rem auto;
+    margin: 0 auto;
     padding: 0.7rem 2rem;
     justify-content: center;
     align-items: center;
@@ -167,6 +166,7 @@ label{
 
 
 #book-card-section{
+    grid-area: book-card-section;
     margin: 0;
     padding: 6rem 3rem;
     display: grid;
